grammar.js
    source_file: ($) => $.root_expression,

    block_comment: (_) => token(prec(-1, seq("/*", /[^*]*\*+([^/*][^*]*\*+)*/, "/"))),

    root_expression: ($) => choice(
      $.open_expression,
      $.closed_expression,
    ),

    open_expression: ($) => prec.right(seq(
      $.expression,
      repeat(choice(
        seq("|", $._pipeline_stage),
        alias($._pipeline_map_shorthand, $.map_shorthand),
      )),
    )),

    closed_expression: ($) => prec.right(seq(
      $.value,
      repeat(choice(
        seq("|", $._pipeline_stage),
        alias($._pipeline_map_shorthand, $.map_shorthand),
      )),
    )),

    _pipeline_map_shorthand: ($) => choice(
      prec(1, seq(
        "|>",
        field("expression", alias($.parenthesized_open_expression, $.open_expression)),
      )),
      seq(
        "|>",
        field("expression", alias($._map_shorthand_expression, $.open_expression)),
      ),
    ),

    _pipeline_stage: ($) => choice($._pipeline_expression, $.input_binding_expression),

    parenthesized_expression: ($) => seq(
      "(",
      field("expression", $.root_expression),
      ")",
    ),

    // Preserve the open-expression shape expected by map shorthand while
    // retaining the parenthesized expression as its single operation.
    function_call: ($) => seq(
      field("name", alias($._function_name, $.function_name)),
      optional(seq(
        "(",
        optional(choice(
          $.argument_list,
          alias($._trailing_argument_list, $.argument_list),
        )),
        ")",
      )),
    ),

    _function_name: ($) => choice($._identifier, /[A-Za-z]+(?:-[A-Za-z]+)+/),

    argument_list: ($) => prec.left(seq(
      choice($.positional_argument, $.named_argument, $.spread_argument),
      repeat(seq(",", choice($.positional_argument, $.named_argument, $.spread_argument))),
    )),

    _trailing_argument_list: ($) => prec.right(seq(
      choice($.positional_argument, $.named_argument, $.spread_argument),
      repeat(seq(",", choice($.positional_argument, $.named_argument, $.spread_argument))),
      ",",
    )),

    positional_argument: ($) => $._argument_value,

    _argument_value: ($) => choice(
      $.binary_expression,
      $.guarded_expression,
      $.unary_expression,
      alias($._nested_closed_expression, $.closed_expression),
      $.value,
      $.tuple_projection,
      $.pair_component_access,
      alias($._nested_open_expression, $.open_expression),
      $.parameterized_expression,
      $.parenthesized_expression,
    ),

    // Parentheses delimit the nested expression, so a function call or
    // function pipeline can be passed directly as a higher-order argument.
    interval_literal: ($) => seq(
      "I",
      choice(
        seq(
          field("lower_delimiter", choice("[", "(", "]")),
          field("lower_bound", $.interval_bound),
          ",",
          field("upper_bound", $.interval_bound),
          field("upper_delimiter", choice("]", ")", "[")),
        ),
        $.interval_shorthand,
      ),
    ),

    interval_bound: ($) => choice(
      $.numeric_literal,
      $.boolean_literal,
      $.quoted_literal,
      $.temporal_literal,
      $.infinite_bound,
    ),

    array_literal: ($) => prec.dynamic(1, choice(
      seq("{", "}"),
      prec(1, seq(
        "{",
        $.array_element,
        repeat(seq(",", $.array_element)),
        "}",
      )),
      seq(
        "{",
        $.array_element,
        repeat(seq(",", $.array_element)),
        "}",
      ),
    )),

    array_element: ($) => choice(
      seq(
        field("spread", "..."),
        field("expression", optional($._positional_spread_operand)),
      ),
      field("expression", choice(
        alias($._array_closed_expression, $.closed_expression),
        $._compound_value,
      )),
    ),

    _array_closed_expression: ($) => prec.right(2, seq(
      $._compound_value,
      choice(
        seq("|", $._pipeline_stage),
        alias($._pipeline_map_shorthand, $.map_shorthand),
      ),
      repeat(choice(
        seq("|", $._pipeline_stage),
        alias($._pipeline_map_shorthand, $.map_shorthand),
      )),
    )),

    _positional_spread_operand: ($) => choice(
      alias($._array_closed_expression, $.closed_expression),
      $._compound_value,
      $.parenthesized_expression,
      $.guarded_expression,
      $.unary_expression,
      $.binary_expression,
    ),

    _compound_value: ($) => choice(
      $.incoming_value,
      $.constant_reference,
      $.variable,
      $.type_literal,
      $.record_access,
      $.numeric_literal,
      $.boolean_literal,
      $.null_literal,
      $.quoted_literal,
      $.temporal_literal,
      $.array_literal,
      $.tuple_literal,
      $.pair_literal,
      $.grouping_literal,
      $.dictionary_literal,
      $.record_literal,
      $.interval_literal,
    ),

    tuple_literal: ($) => seq(
      "T",
      "(",
      choice(
        seq(
          alias($.tuple_leading_spread_element, $.tuple_element),
          repeat(seq(",", $.tuple_element)),
        ),
        seq(
          $.tuple_element,
          ",",
          $.tuple_element,
          repeat(seq(",", $.tuple_element)),
        ),
      ),
      ")",
    ),

    tuple_element: ($) => choice(
      seq(
        field("spread", "..."),
        field("expression", optional($._positional_spread_operand)),
      ),
      field("expression", choice(
        alias($._array_closed_expression, $.closed_expression),
        $._compound_value,
      )),
    ),

    pair_literal: ($) => seq(
      "(",
      field("key", $.root_expression),
      "=>",
      field("value", $.root_expression),
      ")",
    ),

    dictionary_literal: ($) => seq(
      "!{",
      optional(seq(
        $.pair_literal,
        repeat(seq(",", $.pair_literal)),
      )),
      "}",
    ),

    record_literal: ($) => choice(
      seq("{", ":", "}"),
      prec.dynamic(2, seq(
        "{",
        $._record_entry,
        repeat(seq(",", $._record_entry)),
        "}",
      )),
    ),

    _record_entry: ($) => choice(
      $.record_field,
      $.record_spread,
    ),

    record_field: ($) => seq(
      field("name", $.record_field_name),
      ":=",
      choice(
        seq(
          field("spread", "..."),
          field("value", optional(choice($._compound_value, $.expression))),
        ),
        field("value", $._compound_value),
      ),
    ),

    record_field_name: ($) => choice(
      $.private_record_field_name,
      $.public_record_field_name,
    ),

    private_record_field_name: (_) => privateName,

    public_record_field_name: ($) => choice(
      $.unquoted_record_field_name,
      $.double_quoted_literal,
      $.backtick_quoted_literal,
    ),

    unquoted_record_field_name: (_) => unquotedPublicName,

    numeric_literal: (_) => /-?(?:0|[1-9][0-9]*)(?:\.[0-9]+)?/,

    variable: (_) => /@[A-Za-z][A-Za-z0-9]*/,

    record_access: ($) => seq(
      choice(
        field("field", $.record_field_selector),
        seq(
          field("root", $.expression_root),
          field("field", $.original_record_field_selector),
        ),
      ),
      repeat(field("field", $.immediate_record_field_selector)),
    ),

    expression_root: (_) => /\^+\./,

    original_record_field_selector: ($) => choice(
      alias(token.immediate(prec(-1, /[A-Za-z_][A-Za-z0-9_]*(?:-[A-Za-z0-9_]+)*/)), $.named_record_field),
      alias(token.immediate(prec(-1, /(?:0|[1-9][0-9]*)/)), $.positional_record_field),
    ),

    named_record_field: (_) => /\.[A-Za-z_][A-Za-z0-9_]*(?:-[A-Za-z0-9_]+)*/,

    positional_record_field: (_) => /\.(?:0|[1-9][0-9]*)/,

    boolean_literal: (_) => choice("#true", "#false"),

    type_literal: (_) => token(seq(":", /[A-Za-z][A-Za-z0-9]*(?:-[A-Za-z0-9]+)*/)),

    null_literal: (_) => "#null",

    double_quoted_literal: ($) => seq(
      '"',
      repeat(choice($.double_quoted_content, $.escape_sequence)),
      '"',
    ),

    double_quoted_content: (_) => token.immediate(/[^"\\\r\n]+/),

    backtick_quoted_literal: ($) => seq(
      "`",
      optional($.backtick_quoted_content),
      "`",
    ),

    backtick_quoted_content: (_) => token.immediate(/[^`\r\n]+/),

    date_literal: (_) => /#"[0-9]{4}-[0-9]{2}-[0-9]{2}"/,
