test/corpus/compound_values.txt
==================
Empty array
==================

{}

---

(source_file
  (root_expression
    (closed_expression
      (array_literal))))

==================
Null literal in collections
==================

{#null, T(#null, #true)}

---

(source_file
  (root_expression
    (closed_expression
      (array_literal
        (array_element
          (null_literal))
        (array_element
          (tuple_literal
            (tuple_element
              (null_literal))
            (tuple_element
              (boolean_literal))))))))

==================
Array values and whitespace
==================

{ 1, #true, "foo", #"2025-12-17", @value, ^.property, ^.0 }

---

(source_file
  (root_expression
    (closed_expression
      (array_literal
        (array_element
          expression: (numeric_literal))
        (array_element
          expression: (boolean_literal))
        (array_element
          expression: (double_quoted_literal
            (double_quoted_content)))
        (array_element
          expression: (date_literal))
        (array_element
          expression: (variable))
        (array_element
          expression: (record_access
            root: (expression_root)
            field: (original_record_field_selector
              (named_record_field))))
        (array_element
          expression: (record_access
            root: (expression_root)
            field: (original_record_field_selector
              (positional_record_field))))))))

==================
Input expressions as array elements
==================

{ @foo | text-to-func("bar") }

---

(source_file
  (root_expression
    (closed_expression
      (array_literal
        (array_element
          expression: (closed_expression
            (variable)
            (function_call
              name: (function_name)
              (argument_list
                (positional_argument
                  (double_quoted_literal
                    (double_quoted_content)))))))))))

==================
Nested and single-element arrays
==================

{{1}, {2, 3}}

---

(source_file
  (root_expression
    (closed_expression
      (array_literal
        (array_element
          (array_literal
            (array_element
              (numeric_literal))))
        (array_element
          (array_literal
            (array_element
              (numeric_literal))
            (array_element
              (numeric_literal))))))))

==================
Tuple with minimum arity
==================

T(1, 2)

---

(source_file
  (root_expression
    (closed_expression
      (tuple_literal
        (tuple_element
          (numeric_literal))
        (tuple_element
          (numeric_literal))))))

==================
Mixed and nested tuples
==================

T("foo", #true, T(#"2025-12-17", ^.0), @value)

---

(source_file
  (root_expression
    (closed_expression
      (tuple_literal
        (tuple_element
          expression: (double_quoted_literal
            (double_quoted_content)))
        (tuple_element
          expression: (boolean_literal))
        (tuple_element
          expression: (tuple_literal
            (tuple_element
              expression: (date_literal))
            (tuple_element
              expression: (record_access
                root: (expression_root)
                field: (original_record_field_selector
                  (positional_record_field))))))
        (tuple_element
          expression: (variable))))))

==================
Tuple spread elements
==================

T(...T(1, 2), 3, ...T(4, 5), ...)

---

(source_file
  (root_expression
    (closed_expression
      (tuple_literal
        (tuple_element
          expression: (tuple_literal
            (tuple_element
              expression: (numeric_literal))
            (tuple_element
              expression: (numeric_literal))))
        (tuple_element
          expression: (numeric_literal))
        (tuple_element
          expression: (tuple_literal
            (tuple_element
              expression: (numeric_literal))
            (tuple_element
              expression: (numeric_literal))))
        (tuple_element)))))

==================
Empty record
==================

{:}

---

(source_file
  (root_expression
    (closed_expression
      (record_literal))))

==================
Unquoted record field names allow digits after the first letter
==================

{a1 := 1, field-2 := 2}

---

(source_file
  (root_expression
    (closed_expression
      (record_literal
        (record_field
          name: (record_field_name
            (public_record_field_name
              (unquoted_record_field_name)))
          value: (numeric_literal))
        (record_field
          name: (record_field_name
            (public_record_field_name
              (unquoted_record_field_name)))
          value: (numeric_literal))))))

==================
Record fields and quoted names
==================

{name := "Alice", "display name" := "A", `legacy name` := 42}

---

(source_file
  (root_expression
    (closed_expression
      (record_literal
        (record_field
          name: (record_field_name
            (public_record_field_name
              (unquoted_record_field_name)))
          value: (double_quoted_literal
            (double_quoted_content)))
        (record_field
          name: (record_field_name
            (public_record_field_name
              (double_quoted_literal
                (double_quoted_content))))
          value: (double_quoted_literal
            (double_quoted_content)))
        (record_field
          name: (record_field_name
            (public_record_field_name
              (backtick_quoted_literal
                (backtick_quoted_content))))
          value: (numeric_literal))))))

==================
Nested compound values
==================

{name := "Alice", scores := {10,20,30}, metadata := {active := #true}, pair := T(1,2)}

---

(source_file
  (root_expression
    (closed_expression
      (record_literal
        (record_field
          name: (record_field_name
            (public_record_field_name
              (unquoted_record_field_name)))
          value: (double_quoted_literal
            (double_quoted_content)))
        (record_field
          name: (record_field_name
            (public_record_field_name
              (unquoted_record_field_name)))
          value: (array_literal
            (array_element
              expression: (numeric_literal))
            (array_element
              expression: (numeric_literal))
            (array_element
              expression: (numeric_literal))))
        (record_field
          name: (record_field_name
            (public_record_field_name
              (unquoted_record_field_name)))
          value: (record_literal
            (record_field
              name: (record_field_name
                (public_record_field_name
                  (unquoted_record_field_name)))
              value: (boolean_literal))))
        (record_field
          name: (record_field_name
            (public_record_field_name
              (unquoted_record_field_name)))
          value: (tuple_literal
            (tuple_element
              expression: (numeric_literal))
            (tuple_element
              expression: (numeric_literal))))))))

==================
Compound values in pipelines and arguments
==================

foo({1}, T(1,2), {name := "Alice"}) | consume

---

(source_file
  (root_expression
    (open_expression
      (function_call
        name: (function_name)
        (argument_list
          (positional_argument
            (array_literal
              (array_element
                expression: (numeric_literal))))
          (positional_argument
            (tuple_literal
              (tuple_element
                expression: (numeric_literal))
              (tuple_element
                expression: (numeric_literal))))
          (positional_argument
            (record_literal
              (record_field
                name: (record_field_name
                  (public_record_field_name
                    (unquoted_record_field_name)))
                value: (double_quoted_literal
                  (double_quoted_content)))))))
      (function_call
        name: (function_name)))))

==================
Tuple as closed-expression source
==================

T(1,2) | consume

---

(source_file
  (root_expression
    (closed_expression
      (tuple_literal
        (tuple_element
          expression: (numeric_literal))
        (tuple_element
          expression: (numeric_literal)))
      (function_call
        name: (function_name)))))

==================
Record as closed-expression source
==================

{name := "Alice"} | consume

---

(source_file
  (root_expression
    (closed_expression
      (record_literal
        (record_field
          name: (record_field_name
            (public_record_field_name
              (unquoted_record_field_name)))
          value: (double_quoted_literal
            (double_quoted_content))))
      (function_call
        name: (function_name)))))

==================
Compound values as closed-expression sources
==================

{1,2,3} | sum

---

(source_file
  (root_expression
    (closed_expression
      (array_literal
        (array_element
          expression: (numeric_literal))
        (array_element
          expression: (numeric_literal))
        (array_element
          expression: (numeric_literal)))
      (function_call
        name: (function_name)))))

==================
Compound rejects empty tuple
==================

T()

---

(source_file
  (root_expression
    (closed_expression
      (tuple_literal
        (tuple_element
          (MISSING "..."))))))

==================
Compound rejects single-value tuple
==================

T(1)

---

(ERROR
  (tuple_element
    (numeric_literal)))

==================
Compound reports missing closing delimiter
==================

{1,2

---

(source_file
  (root_expression
    (closed_expression
      (array_literal
        (array_element
          (numeric_literal))
        (array_element
          (numeric_literal))
        (MISSING "}")))))

==================
Compound reports missing array comma
==================

{1 2}

---

(source_file
  (root_expression
    (closed_expression
      (array_literal
        (array_element
          (numeric_literal))
        (ERROR
          (UNEXPECTED '2'))))))

==================
Compound reports malformed record field
==================

{name "Alice"}

---

(source_file
  (root_expression
    (closed_expression
      (array_literal
        (ERROR
          (record_field_name
            (public_record_field_name
              (unquoted_record_field_name))))
        (array_element
          (double_quoted_literal
            (double_quoted_content)))))))

==================
Compound rejects mixed array and record members
:error
==================

{1, name := 2}

---

(ERROR)

==================
Public record field names
==================

{foo := 10, bar := 20}

---

(source_file
  (root_expression
    (closed_expression
      (record_literal
        (record_field
          (record_field_name
            (public_record_field_name
              (unquoted_record_field_name)))
          (numeric_literal))
        (record_field
          (record_field_name
            (public_record_field_name
              (unquoted_record_field_name)))
          (numeric_literal))))))

==================
Array spread elements
==================

{1, ...{2, 3}, 4}

---

(source_file
  (root_expression
    (closed_expression
      (array_literal
        (array_element
          expression: (numeric_literal))
        (array_element
          expression: (array_literal
            (array_element
              expression: (numeric_literal))
            (array_element
              expression: (numeric_literal))))
        (array_element
          expression: (numeric_literal))))))

==================
Private record field names
==================

{_tmp := 20, _x1 := 30}

---

(source_file
  (root_expression
    (closed_expression
      (record_literal
        (record_field
          (record_field_name
            (private_record_field_name))
          (numeric_literal))
        (record_field
          (record_field_name
            (private_record_field_name))
          (numeric_literal))))))

==================
Mixed public and private record field names
==================

{foo := 10, _internalValue := 20, bar := 30}

---

(source_file
  (root_expression
    (closed_expression
      (record_literal
        (record_field
          (record_field_name
            (public_record_field_name
              (unquoted_record_field_name)))
          (numeric_literal))
        (record_field
          (record_field_name
            (private_record_field_name))
          (numeric_literal))
        (record_field
          (record_field_name
            (public_record_field_name
              (unquoted_record_field_name)))
          (numeric_literal))))))
