test/corpus/conditional-expressions.txt
==================
Forward conditional expression
==================

is-negative ?> absolute

---

(source_file
  (root_expression
    (open_expression
      (conditional_expression
        left: (function_call
          name: (function_name))
        operator: (conditional_operator)
        right: (function_call
          name: (function_name))))))

==================
Backward conditional expression preserves the outer pipeline
==================

absolute | add(5) <? greater-than(20) | finish

---

(source_file
  (root_expression
    (open_expression
      (function_call
        name: (function_name))
      (conditional_expression
        left: (function_call
          name: (function_name)
          (argument_list
            (positional_argument
              (numeric_literal))))
        operator: (conditional_operator)
        right: (function_call
          name: (function_name)
          (argument_list
            (positional_argument
              (numeric_literal)))))
      (function_call
        name: (function_name)))))

==================
Grouped conditional expressions can be operands
==================

(is-negative ?> absolute) <? greater-than(10)

---

(source_file
  (root_expression
    (open_expression
      (conditional_expression
        left: (parenthesized_expression
          expression: (root_expression
            (open_expression
              (conditional_expression
                left: (function_call
                  name: (function_name))
                operator: (conditional_operator)
                right: (function_call
                  name: (function_name))))))
        operator: (conditional_operator)
        right: (function_call
          name: (function_name)
          (argument_list
            (positional_argument
              (numeric_literal))))))))
